--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 <!-- header section start -->
 
 <header>
-
     <div id="menu-bar" class="fas fa-bars"></div>
-
 
     <a href="#" class="logo"><span>T</span>ravel</a>
 
@@ -57,15 +55,32 @@
         <p>don't have and account? <a href="#">register now</a></p>
     </form>
 </div>
-
-
-
-
-
 <!-- header section end -->
 
+<!-- home section start -->
+<section class="home" id="home">
+   <div class="content">
+       <h3>adventure is worthwile</h3>
+       <p>Lorem ipsum dolor sit, amet consectetur adipisicing.</p>
+       <a href="#" class="btn">discover more</a>
+   </div>
+
+   <div class="controls">
+       <span class="vid-btn active" data-src="/video/vid-01.mp4"></span>
+       <span class="vid-btn" data-src="/video/vid-02.mp4"></span>
+       <span class="vid-btn" data-src="/video/vid-03.mp4"></span>
+       <span class="vid-btn" data-src="/video/vid-04.mp4"></span>
+       <span class="vid-btn" data-src="/video/vid-05.mp4"></span>
+   </div>
+
+   <div class="video-container">
+       <video src="/video/vid-01.mp4" id="video-slider" loop autoplay muted></video>
+   </div>
 
 
+
+</section>
+<!-- home section end -->
 
 
     <!-- custom js file link -->
