--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
    </div>
 
    <div class="controls">
-       <span class="vid-btn active" data-src="/video/vid-01.mp4"></span>
-       <span class="vid-btn" data-src="/video/vid-02.mp4"></span>
-       <span class="vid-btn" data-src="/video/vid-03.mp4"></span>
-       <span class="vid-btn" data-src="/video/vid-04.mp4"></span>
-       <span class="vid-btn" data-src="/video/vid-05.mp4"></span>
+       <span class="vid-btn active" data-src="./video/vid-01.mp4"></span>
+       <span class="vid-btn" data-src="./video/vid-02.mp4"></span>
+       <span class="vid-btn" data-src="./video/vid-03.mp4"></span>
+       <span class="vid-btn" data-src="./video/vid-04.mp4"></span>
+       <span class="vid-btn" data-src="./video/vid-05.mp4"></span>
    </div>
 
    <div class="video-container">
-       <video src="/video/vid-01.mp4" id="video-slider" loop autoplay muted></video>
+       <video src="./video/vid-01.mp4" id="video-slider" loop autoplay muted></video>
    </div>
 
 
@@ -84,7 +84,7 @@
 
 
     <!-- custom js file link -->
-<script src="/js/script.js"></script>
+<script src="./js/script.js"></script>
     
 </body>
 </html>
