--- a/index.html
+++ b/index.html
@@ -262,6 +262,163 @@
 </section>
 <!-- packages section end -->
 
+<!-- services section start -->
+<section class="services" id="services">
+    <h1 class="heading">
+        <span>s</span>
+        <span>e</span>
+        <span>r</span>
+        <span>v</span>
+        <span>i</span>
+        <span>c</span>
+        <span>e</span>
+        <span>s</span>
+    </h1>
+
+    <div class="box-container">
+        <div class="box">
+            <i class="fas fa-hotel"></i>
+            <h3>affordable hotels</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit laboriosam deleniti est corporis, nisi voluptatum aut iusto aliquam error eaque.</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-utensils"></i>
+            <h3>food & drink</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit laboriosam deleniti est corporis, nisi voluptatum aut iusto aliquam error eaque.</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-bullhorn"></i>
+            <h3>safty guide</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit laboriosam deleniti est corporis, nisi voluptatum aut iusto aliquam error eaque.</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-globe-asia"></i>
+            <h3>around the world</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit laboriosam deleniti est corporis, nisi voluptatum aut iusto aliquam error eaque.</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-plane"></i>
+            <h3>fastest travel</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit laboriosam deleniti est corporis, nisi voluptatum aut iusto aliquam error eaque.</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-hiking"></i>
+            <h3>adventures</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit laboriosam deleniti est corporis, nisi voluptatum aut iusto aliquam error eaque.</p>
+        </div>
+        
+
+    </div>
+</section>
+<!-- services section end -->
+
+<!-- gallery section start -->
+<section class="gallery" id="gallery">
+    <h1 class="heading">
+        <span>g</span>
+        <span>a</span>
+        <span>l</span>
+        <span>l</span>
+        <span>e</span>
+        <span>r</span>
+        <span>y</span>
+    </h1>
+
+    <div class="box-container">
+        <div class="box">
+            <img src="./img/gallery-01.jpg" alt="">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, non?</p>
+                <a href="#" class="btn">see more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="./img/gallery-02.jpg" alt="">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, non?</p>
+                <a href="#" class="btn">see more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="./img/gallery-03.jpg" alt="">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, non?</p>
+                <a href="#" class="btn">see more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="./img/gallery-04.jpg" alt="">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, non?</p>
+                <a href="#" class="btn">see more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="./img/gallery-05.jpg" alt="">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, non?</p>
+                <a href="#" class="btn">see more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="./img/gallery-06.jpg" alt="">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, non?</p>
+                <a href="#" class="btn">see more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="./img/gallery-07.jpg" alt="">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, non?</p>
+                <a href="#" class="btn">see more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="./img/gallery-08.jpg" alt="">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, non?</p>
+                <a href="#" class="btn">see more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="./img/gallery-09.jpg" alt="">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, non?</p>
+                <a href="#" class="btn">see more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <img src="./img/gallery-10.jpg" alt="">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita, non?</p>
+                <a href="#" class="btn">see more</a>
+            </div>
+        </div>
+        
+    </div>
+</section>
+<!-- gallery section end -->
+
 
     <!-- custom js file link -->
 <script src="./js/script.js"></script>
