--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Tour and travel agency</title>
@@ -419,9 +420,208 @@
 </section>
 <!-- gallery section end -->
 
+<!-- review section start-->
+<section class="review" id="review">
+    <h1 class="heading">
+        <span>r</span>
+        <span>e</span>
+        <span>v</span>
+        <span>i</span>
+        <span>e</span>
+        <span>w</span>
+    </h1>
+    <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="box">
+                    <img src="./img/photo-01.jpg" alt="">
+                    <h3>john doe</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio laudantium sapiente quae fuga quasi repellendus natus, ratione assumenda facilis ad? Quisquam quis accusamus reiciendis labore temporibus, modi explicabo provident quasi!</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="swiper-slide">
+                <div class="box">
+                    <img src="./img/photo-02.jpg" alt="">
+                    <h3>john doe</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio laudantium sapiente quae fuga quasi repellendus natus, ratione assumenda facilis ad? Quisquam quis accusamus reiciendis labore temporibus, modi explicabo provident quasi!</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="swiper-slide">
+                <div class="box">
+                    <img src="./img/photo-03.jpg" alt="">
+                    <h3>john doe</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio laudantium sapiente quae fuga quasi repellendus natus, ratione assumenda facilis ad? Quisquam quis accusamus reiciendis labore temporibus, modi explicabo provident quasi!</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="swiper-slide">
+                <div class="box">
+                    <img src="./img/photo-04.jpg" alt="">
+                    <h3>john doe</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio laudantium sapiente quae fuga quasi repellendus natus, ratione assumenda facilis ad? Quisquam quis accusamus reiciendis labore temporibus, modi explicabo provident quasi!</p>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- review section end -->
+
+<!-- contact section start -->
+<section class="contact" id="contact">
+    <h1 class="heading">
+        <span>c</span>
+        <span>o</span>
+        <span>n</span>
+        <span>t</span>
+        <span>a</span>
+        <span>c</span>
+        <span>t</span>
+    </h1>
+    <div class="row">
+        <div class="image">
+            <img src="./img/contact-section.jpg" alt="">
+        </div>
+
+    <form action="">
+        <div class="inputBox">
+            <input type="text"  placeholder="name">
+            <input type="email"  placeholder="email">
+        </div>
+        <div class="inputBox">
+            <input type="number"  placeholder="number">
+            <input type="text"  placeholder="subject">
+        </div>
+        <textarea placeholder="message" name="" id="" cols="30" rows="10"></textarea>
+        <input type="submit" class="btn" value="send message">
+    </form>
+    </div>
+</section>
+<!-- contact section end -->
+
+<!-- brand section start  -->
+<section class="brand" id="brand">
+
+    <div class="swiper mySwiperSecond">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide"> <img src="./img/Genesis_Motor_logo.svg" alt=""></div>
+            <div class="swiper-slide"> <img src="./img/tesla-motors-1.svg" alt=""></div>
+            <div class="swiper-slide"> <img src="./img/react-academy.svg" alt=""></div>
+            <div class="swiper-slide"> <img src="./img/Burberry_logo.svg" alt=""></div>
+            <div class="swiper-slide"> <img src="./img/Dolce_and_Gabbana_logo.svg" alt=""></div>
+        </div>
+    </div>
+
+</section>
+<!-- brand section end -->
+
+<!-- footer section start -->
+<section class="footer" id="footer">
+    <div class="box-container">
+        <div class="box">
+            <h3>about us</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus possimus, voluptatum ipsa quo mollitia esse dolorum placeat incidunt ipsum est?</p>
+        </div>
+        <div class="box">
+            <h3>branch location</h3>
+            <a href="#">india</a>
+            <a href="#">USA</a>
+            <a href="#">japan</a>
+            <a href="#">france</a>
+        </div>
+
+        <div class="box">
+            <h3>quick links</h3>
+            <a href="#">home</a>
+            <a href="#">book</a>
+            <a href="#">Packages</a>
+            <a href="#">Services</a>
+            <a href="#">Gallery</a>
+            <a href="#">Review</a>
+            <a href="#">Contact</a>
+        </div>
+
+        <div class="box">
+            <h3>follow us</h3>
+            <a href="#">facebook</a>
+            <a href="#">instagram</a>
+            <a href="#">twitter</a>
+            <a href="#">linkedin</a>
+        </div>
+    </div>
+
+    <h1 class="credit"> created by <span> Uladzislau Rykousky </span>| all rights reserved!</h1>
+
+
+</section>
+<!-- footer section end -->
 
     <!-- custom js file link -->
 <script src="./js/script.js"></script>
-    
+<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+<!-- swipe on gallery section -->
+<script>
+    var swiper = new Swiper(".mySwiperSecond", {});
+  </script>
+  <!-- swipe on brand section -->
+      <script>
+        var swiper = new Swiper(".mySwiperSecond", {
+          spaceBetween: 30,
+          centeredSlides: true,
+          autoplay: {
+            delay: 2500,
+            disableOnInteraction: false,
+          },
+          pagination: {
+            el: ".swiper-pagination",
+            clickable: true,
+          },
+        });
+      </script>
+
+<script>
+    var swiper = new Swiper(".mySwiper", {
+      spaceBetween: 30,
+      centeredSlides: true,
+      autoplay: {
+        delay: 3000,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+    });
+  </script>
+  
 </body>
 </html>
